opam-version: "2.0"
name: "orb"
version: "0.1"
synopsis: "Check opam package reproducibility"
maintainer: "Raja Boujbel <rjbou@ocamlpro.com>"
authors: "Raja Boujbel <rjbou@ocamlpro.com>"
homepage: "https://github.com/rjbou/orb"
bug-reports: "https://github.com/rjbou/orb/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "2.0"}
  "cmdliner" {>= "1.0"}
  "opam-client" {>= "2.1.0~rc"}
  "opam-repository" {>= "2.1.0~rc"}
  "opam-core" {>= "2.1.0~rc"}
  "opam-format" {>= "2.1.0~rc"}
  "opam-solver" {>= "2.1.0~rc"}
  "opam-state" {>= "2.1.0~rc"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/rjbou/orb.git"
