opam-version: "2.0"
synopsis: "Check opam package reproducibility"
maintainer: "Robur Team <team@robur.coop>"
authors: [ "Raja Boujbel <rjbou@ocamlpro.com>" "Reynir Björnsson <reynir@reynir.dk" "Hannes Mehnert <hannes@mehnert.org>" ]
homepage: "https://github.com/roburio/orb"
bug-reports: "https://github.com/roburio/orb/issues"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "2.0"}
  "cmdliner" {>= "1.0"}
  "opam-client" {>= "2.1.0~rc"}
  "opam-repository" {>= "2.1.0~rc"}
  "opam-core" {>= "2.1.0~rc"}
  "opam-format" {>= "2.1.0~rc"}
  "opam-solver" {>= "2.1.0~rc"}
  "opam-state" {>= "2.1.0~rc"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["sh" "packaging/FreeBSD/create-package.sh"] {os = "freebsd"}
]
dev-repo: "git+https://github.com/roburio/orb.git"
